# crema

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT-MAP.md  DEPLOY.md  README.md  THIRD-PARTY-NOTICES.md  wrangler.jsonc
.claude/: settings.local.json
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  nightly.yml  pr-title.yml  release.yml
.scratch/android-compose-polish/: SCREENSHOT-AUDIT-HANDOFF.md  design-validation-roadmap.md
.scratch/android-compose-polish/issues/: 01-canvas-profile-preview.md  02-recomposition-state.md  03-icons-accessibility.md  04-motion-tokens-styles.md  05-profile-editor-design.md
.scratch/bean-profile-pin/: DESIGN.md
.scratch/multi-device/: HANDOFF-M1-lan-proxy.md  HANDOFF-M2-2026-06-19.md  M1-PROTOCOL.md  RESEARCH.md
.scratch/multi-device/issues/: 01-two-phase-handoff.md  02-device-pairing-tofu.md  03-mid-session-reattach.md  04-mirror-the-scale.md  05-sync-custom-profiles.md  06-robust-config-write-path.md  07-push-handoff-and-failback.md  08-surface-failures-to-user.md  09-handoff-idle-gate-known-idle.md  10-app-wide-authority-signaling.md  11-multi-controller-ux.md  12-real-de1-hardware-validation.md  13-tablet-side-picker.md  14-hygiene-deviceid-and-recording.md  15-primary-replays-own-recording.md  INDEX.md
.scratch/shell-core-review/: HANDOFF-2026-06-15-s3.md  HANDOFF-2026-06-15-s4.md  HANDOFF-2026-06-15-s5.md  HANDOFF-2026-06-15-s6.md  HANDOFF-2026-06-15.md  HANDOFF.md  PUNCHLIST.md
.scratch/shell-core-review/issues/: 01-export-brew-ratio-uniffi.md  02-export-roast-freshness-uniffi.md  03-export-profile-bounds-uniffi.md  04-web-canonical-to-display-core.md  05-generate-web-bindings-ci.md  06-export-bean-roaster-wire-uniffi.md  07-export-substate-error-machine-uniffi.md  08-core-brew-defaults-source.md  09-core-roast-band5.md  10-export-bean-sync-surface-uniffi.md  11-android-fingerprint-upload-skip.md  12-calibration-section-pills.md  13-visualizer-autoupload-toggle.md  14-android-quickcontrols-steppers-wire.md  15-android-grind-preinf-flush-purge.md  16-android-phone-wiring-regressions.md  17-web-stale-doc-comments.md  18-ffi-parity-calibration-reset.md  22-core-warmup-clamp.md  (+32 more)
android/: .gitignore  CONTEXT.md  IMPLEMENTATION-PLAN.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  compose-stability.conf  proguard-rules.pro
android/distribution/: PLAY-STORE-CHECKLIST.md
brand/: .gitignore  generate_mark.py
captures/: README.md  session-20260517-122732-condensed-shot-pull.jsonl  session-20260517-154746-mode-2-manual-start-timer.jsonl  session-20260517-154905-mode-3-auto.jsonl  session-20260517-155019-mode-1-flow.jsonl  session-20260517-155208-cycle-through-all-modes-twice-second-second-cycle-hit-left-button.jsonl  session-20260517-155249-timer-start-10s-stop-reset.jsonl  session-20260517-174328-bookoo-1.jsonl  session-20260517-213212-bookoo-2.jsonl  session-20260517-215049-bookoo-3.jsonl  session-20260517-222216-bookoo-4.jsonl
core/: Cargo.toml  generate-bindings.sh  typeshare.toml
core/bindings/: crema-core.kt  crema-core.ts
core/de1-app/: Cargo.toml
core/de1-app/examples/: replay.rs
core/de1-app/src/: capture.rs  de1_uuids.rs  error.rs  event.rs  firmware_info.rs  lib.rs
core/de1-app/tests/: replay_fixture.rs
core/de1-app/tests/fixtures/: session-20260517-122732-shot-pull.jsonl
core/de1-domain/: Cargo.toml
core/de1-domain/profiles/: README.md  builtin.json
core/de1-domain/src/: app_settings.rs  bean.rs  bean_coerce.rs  beanconqueror.rs  brand.rs  builtin.rs  coerce.rs  crema_jsonl.rs  crema_profile.rs  error.rs  filter.rs  flow.rs  history.rs  history_export.rs  history_import.rs  ids.rs  lib.rs  maintenance.rs  mode_targets.rs  profile.rs  profile_bounds.rs  profile_fingerprint.rs  profile_import.rs  profile_roast.rs  replay.rs  saw_learning.rs  session.rs  settings_import.rs  shot.rs  shot_quality.rs  steam.rs  stop.rs  tank.rs  units.rs  visualizer_error.rs  visualizer_sync.rs  visualizer_wire.rs  volume.rs  water.rs  weight_gate.rs
core/de1-ffi/: Cargo.toml  uniffi.toml
core/de1-ffi/src/: lib.rs
core/de1-protocol/: Cargo.toml
core/de1-protocol/src/: calibration.rs  command.rs  error.rs  firmware.rs  fixed_point.rs  lib.rs  mmr.rs  profile.rs  shot_sample.rs  state.rs
core/de1-scale/: Cargo.toml
core/de1-scale/src/: acaia.rs  atomheart_eclair.rs  bookoo.rs  decent_scale.rs  difluid.rs  eureka_precisa.rs  felicita.rs  hiroia_jimmy.rs  lib.rs  scale.rs  skale.rs  smartchef.rs  solo_barista.rs  timemore.rs  varia_aku.rs
core/de1-wasm/: Cargo.toml
core/de1-wasm/src/: lib.rs
docs/: 01-feasibility.md  02-ble-protocol.md  03-pyde1-evaluation.md  04-mvp-scope.md  05-plugin-architecture.md  06-scale-protocols.md  07-algorithm-review.md  08-ffi-and-web-scope.md  09-web-shell.md  10-wiring-existing-read-paths.md  11-new-read-paths-and-ui.md  12-accessibility.md  13-deferred-refactors.md  14-write-actions-audit.md  15-app-level-writes.md  16-profile-upload-plan.md  17-firmware-update-plan.md  18-calibration-safety.md  19-write-path-verification.md  20-read-paths-audit.md  21-write-on-configure-mmr-plan.md  22-reaprime-action-list.md  23-mode-settings-panels.md  24-profile-dedup.md  25-naming-conventions.md  26-shell-to-core-audit.md  27-write-side-gaps.md  28-bean-roaster-library.md  29-scale-completeness.md  30-scale-impl-divergence.md  31-followups.md  32-bean-library-implementation.md  33-bean-library-redesign.md  34-app-backup-restore.md  35-visualizer-oauth-setup.md  36-visualizer-sync-plan.md  37-visualizer-sync-impl.md  38-visualizer-api-audit.md  39-firmware-gates.md  40-safety-checks-audit.md  (+11 more)
fastlane/: README.md
scripts/: install-hooks.sh
spike-b/: README.md  settings.gradle.kts
spike-b/app/: build.gradle.kts
web/: .env.example  .gitignore  CONTEXT.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts  wrangler.jsonc
web/scripts/: subset-phosphor.mjs
web/src/: app.css  app.d.ts  app.html
web/static/: _headers
(+469 files in other folders)
