# Crema — `de1-core` Rust workspace.
#
# Sans-IO core: protocol codecs, domain model, shot state machine. No Bluetooth,
# no UI, no file I/O. See ../docs/ for the design.
[workspace]
resolver = "3"
members = ["de1-protocol", "de1-scale", "de1-domain", "de1-app", "de1-ffi", "de1-wasm"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "GPL-3.0-or-later"
authors = ["Adrian Maceiras"]

# Lints applied to every member crate; each opts in with `[lints] workspace = true`.
# Lint *groups* take priority -1 so specific lints (priority 0) can override them.
[workspace.lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
# Numeric casts that can silently lose data: a count narrowed to a smaller
# integer, or an integer-to-float conversion that drops precision. Each site
# is either converted to a checked `try_from` or `#[allow]`ed with a comment
# explaining why the cast is sound.
cast_possible_truncation = "deny"
cast_precision_loss = "deny"

# Dependencies shared across member crates.
[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
