# Crema — `de1-core` Rust workspace.
#
# Sans-IO core: protocol codecs, domain model, shot state machine. No Bluetooth,
# no UI, no file I/O. See ../docs/ for the design.
[workspace]
resolver = "3"
members = ["de1-protocol", "de1-scale", "de1-domain", "de1-app", "de1-ffi", "de1-wasm"]

[workspace.package]
edition = "2024"
rust-version = "1.95"
license = "GPL-3.0-or-later"
authors = ["Adrian Maceiras"]

# Lints applied to every member crate; each opts in with `[lints] workspace = true`.
# Lint *groups* take priority -1 so specific lints (priority 0) can override them.
[workspace.lints.rust]
unsafe_code = "forbid"
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }

[workspace.lints.clippy]
all = { level = "deny", priority = -1 }
# Numeric casts that can silently lose data: a count narrowed to a smaller
# integer, or an integer-to-float conversion that drops precision. Each site
# is either converted to a checked `try_from` or `#[allow]`ed with a comment
# explaining why the cast is sound.
cast_possible_truncation = "deny"
cast_precision_loss = "deny"

# Dependencies shared across member crates.
[workspace.dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Release builds: fat LTO + one codegen unit. Cross-crate inlining + dead-code elimination trims
# the release binaries — the de1-wasm bundle (web) and the de1-ffi `.so`
# (Android) — at no runtime cost; on the per-frame decode path it measures
# marginally *faster*, since LTO inlines across the protocol/domain crate
# boundary. Applies to release builds only; `cargo test` (dev profile) is
# unaffected. We deliberately keep the default `opt-level = 3`: dropping to
# "s"/"z" would shrink the wasm a further ~17–24 % but makes the core 1.4–2×
# slower per frame (measured) — a poor trade for a precached asset.
[profile.release]
lto = true
codegen-units = 1
# NOTE: do NOT add `strip = true` here — uniffi-bindgen reads FFI metadata
# back out of the compiled cdylib's symbol table to generate the Kotlin
# bindings (see app/build.gradle.kts's generateUniffiBindings task), and a
# Cargo-level strip removes that before bindgen ever runs ("No UniFFI
# metadata found"). AGP already strips the packaged .so's debug symbols at
# APK-build time (stripReleaseDebugSymbols) — that's the right layer for it.
