[package]
name = "de1-app"
version = "0.1.0"
description = "Crema headless application core — the FFI-agnostic facade"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
de1-protocol = { path = "../de1-protocol", features = ["serde"] }
de1-domain = { path = "../de1-domain" }
de1-scale = { path = "../de1-scale" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
typeshare = "1.0.5"

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
