[package]
name = "de1-app"
version = "0.1.0"
description = "Crema headless application core — the FFI-agnostic facade"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
de1-protocol = { path = "../de1-protocol", features = ["serde"] }
de1-domain = { path = "../de1-domain" }
de1-scale = { path = "../de1-scale", features = ["serde"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
typeshare = "1.0.5"
# Optional: `#[wasm_bindgen]` on the public enums that cross the wasm
# boundary (today: `Source`). Same pattern as `de1-protocol`'s
# `wasm-bindgen` feature — enabled only by `de1-wasm`.
wasm-bindgen = { version = "0.2", optional = true }

[features]
# Adds `#[wasm_bindgen]` to public enums that cross the wasm boundary
# as direct function args. Enabled only by `de1-wasm`.
wasm-bindgen = ["dep:wasm-bindgen", "de1-protocol/wasm-bindgen"]

[dev-dependencies]
serde_json = "1"

[lints]
workspace = true
