[package]
name = "de1-domain"
version = "0.1.0"
description = "DE1 espresso domain model — profiles, shot logic"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
de1-protocol = { path = "../de1-protocol", features = ["serde"] }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
typeshare = "1.0.5"

[lints]
workspace = true
