[package]
name = "de1-domain"
version = "0.1.0"
description = "DE1 espresso domain model — profiles, shot logic"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
de1-protocol = { path = "../de1-protocol" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
typeshare = "1.0.5"
# Dependency-free, size-conscious regex engine (~10× smaller wasm footprint
# than the full `regex` crate — no Unicode tables / SIMD). Used only by
# `profile_roast` to port the built-in roast-suitability heuristic. The
# patterns are ASCII (the input is lowercased title/notes), so regex-lite's
# ASCII `\b` / `\s` semantics match the TS source exactly.
regex-lite = "0.1"
# UUID v7 (RFC 9562, 2024) for stable profile IDs — timestamp-prefixed +
# 74 bits of randomness, lexicographically sortable by creation time.
# Used by `new_profile_id` for custom profiles + the `gen-builtin-ids`
# tool that fills `profiles/builtin.json` with stable IDs once.
uuid = { version = "1", features = ["v7"] }

[[bin]]
# One-shot tool: fills `profiles/builtin.json` with stable UUID v7 IDs
# the first time it runs, and is a no-op (idempotent) on every
# subsequent run. The dashed target name matches the user-facing
# `cargo run -p de1-domain --bin gen-builtin-ids` invocation.
name = "gen-builtin-ids"
path = "src/bin/gen_builtin_ids.rs"

[lints]
workspace = true
