[package]
name = "de1-protocol"
version = "0.1.0"
description = "DE1 espresso machine Bluetooth LE protocol codecs and packet types"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
# Derive macro for the crate error type.
thiserror.workspace = true
# `serde` derives on packet types. Non-optional (un-gated) so `typeshare` sees the
# camelCase `rename_all` on the packet structs — typeshare doesn't evaluate
# `cfg_attr`, so a feature-gated rename emits the wrong snake_case (review #01 F24).
# Every workspace consumer enabled the old `serde` feature anyway.
serde = { workspace = true }
typeshare = "1.0.5"

[lints]
workspace = true
