[package]
name = "de1-wasm"
version = "0.1.0"
description = "Crema wasm-bindgen bridge — exposes the de1-app core to the web shell"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# `wasm-bindgen` feature: lets `de1-wasm` reuse the protocol- and
# app-level enums (`MmrRegister`, `CalTarget`, `Source`) as function-arg
# types on the wasm ABI without per-crate mirror enums. Native builds
# of these crates (used by `de1-ffi` / `de1-app` consumers) leave the
# feature off.
de1-app = { path = "../de1-app", features = ["wasm-bindgen"] }
de1-domain = { path = "../de1-domain" }
de1-protocol = { path = "../de1-protocol", features = ["wasm-bindgen"] }
serde_json = { workspace = true }
wasm-bindgen = "0.2.121"
# The `uuid` crate needs a randomness source on `wasm32-unknown-unknown`;
# the `js` feature wires it through `crypto.getRandomValues()` via
# `wasm-bindgen` + `js-sys`. Pulled in (rather than declared in
# `de1-domain`) so the workspace build for the host target stays free of
# the JS-binding dependency tree. See:
# https://docs.rs/uuid/latest/uuid/#wasm-support
uuid = { version = "1", features = ["v7", "js"] }

[dev-dependencies]
serde_json = { workspace = true }

# Like de1-ffi, this crate intentionally does NOT use `[lints] workspace = true`:
# wasm-bindgen's generated binding glue requires `unsafe`, which the workspace
# lint table forbids. The lints below mirror the workspace's, minus that one.
[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
