[package]
name = "de1-wasm"
version = "0.1.0"
description = "Crema wasm-bindgen bridge — exposes the de1-app core to the web shell"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

# wasm-pack runs binaryen's `wasm-opt` over the wasm-bindgen output. We pin the
# level here rather than lean on wasm-pack's implicit default so it's a
# documented, reproducible decision that can't silently drift if wasm-pack
# changes its default (or skip the pass — wasm-pack only WARNs if it can't run).
#
# `-O` is the sweet spot, measured on this bundle: it trims the raw module
# ~209 KB (1.65 MB → 1.44 MB) over no wasm-opt, and over the wire — Cloudflare
# serves it brotli/gzip-compressed — every other level lands within <0.3 %.
# `-Oz` shaves a further ~20 KB *raw* but that win reverses after compression
# (brotli 326.3 KB vs 325.3 KB), and its size-first passes cost per-frame decode
# speed — the same trade the `[profile.release]` opt-level note (core/Cargo.toml)
# deliberately rejects. So: keep `-O`.
[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-O']

[dependencies]
de1-app = { path = "../de1-app" }
de1-domain = { path = "../de1-domain" }
de1-protocol = { path = "../de1-protocol" }
serde_json = { workspace = true }
wasm-bindgen = "0.2.121"
# The `uuid` crate needs a randomness source on `wasm32-unknown-unknown`;
# the `js` feature wires it through `crypto.getRandomValues()` via
# `wasm-bindgen` + `js-sys`. Pulled in (rather than declared in
# `de1-domain`) so the workspace build for the host target stays free of
# the JS-binding dependency tree. See:
# https://docs.rs/uuid/latest/uuid/#wasm-support
uuid = { version = "1", features = ["v7", "js"] }

[dev-dependencies]
serde_json = { workspace = true }

# Like de1-ffi, this crate intentionally does NOT use `[lints] workspace = true`:
# wasm-bindgen's generated binding glue requires `unsafe`, which the workspace
# lint table forbids. The lints below mirror the workspace's, minus that one.
[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }

[lints.clippy]
all = { level = "deny", priority = -1 }
